<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.dico.fit2fit.dashboard"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_recording"
        android:name="com.dico.fit2fit.recording"
        android:label="@string/title_recording"
        tools:layout="@layout/fragment_recording" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dico.fit2fit.options"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_options" />
</navigation>